@@ -196,6 +196,13 @@ ParseLineRuby(DWORD dwCookie, int nLineIndex, TEXTBLOCK * pBuf, int &nActualItem
   int I=0;
   for (I = 0;; nPrevI = I, I = CharNext(pszChars+I) - pszChars)
     {
+      if (I == nPrevI)
+        {
+          // CharNext did not advance, so we're at the end of the string
+          // and we already handled this character, so stop
+          break;
+        }
+
       if (bRedefineBlock)
         {
           int nPos = I;
